# sculptor

./: .dockerignore  .gitignore  .test_durations  README.md  SECURITY.md  justfile
sculptor/: .gitignore  MANIFEST.in  conftest.py  pyproject.toml  pytest.ini
sculptor/builder/: artifacts.py  build-sidecar.sh  cli.py  package-sculptor-x86_64.sh  test-sculptor-desktop-packaged.sh  test_artifacts.py  test_cli.py
sculptor/frontend/: eslint.config.ts  forge.config.ts  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.base.config.ts  vite.electron.config.ts  vite.web.config.ts  vitest.config.ts  vitest.setup.ts
sculptor/frontend/.storybook/: preview.tsx
sculptor/frontend/config/: entitlements.dev.plist
sculptor/frontend/src/: App.tsx  Main.tsx  Router.tsx  apiClient.ts  globals.d.ts  index.css  preload.ts  vite-env.d.ts
sculptor/frontend/src/common/: Auth.ts  Guards.ts  NavigateUtils.ts  ShortcutUtils.ts  Types.ts  Utils.ts  builtinActions.ts  overlayUtils.ts  pseudoSkills.test.ts  pseudoSkills.ts  queryClient.ts  useManagedDependency.test.tsx  useManagedDependency.ts
sculptor/frontend/src/components/: BackendStatusBoundary.tsx  BranchSelector.module.scss  BranchSelector.tsx  BranchSelectorCore.tsx  CapabilityGate.test.tsx  ClosedWorkspaceRow.tsx  ClosedWorkspacesPill.persistence.test.tsx  ClosedWorkspacesPill.test.tsx  Code.module.scss  Code.tsx  DeleteConfirmationDialog.tsx  DevModeIndicator.tsx  Editor.module.scss  Editor.tsx  FilePreview.tsx  MentionNodeView.tsx  NotificationToasts.tsx  RepoPathDialog.module.scss  RequireOnboarding.tsx  StatusIndicators.tsx  ThemeProvider.test.tsx  ThemeProvider.tsx  TipTapConfig.ts  TitleBar.module.scss  TitleBar.tsx  Toast.test.tsx  Toast.tsx  TopBar.tsx  VersionPopover.module.scss  VersionPopover.tsx  VerticalOverlayScrollbar.module.scss  VerticalOverlayScrollbar.tsx  WorkspaceTabs.tsx  fileDisambiguation.ts  useWorkspaceTabActions.ts  workspaceTabIds.ts
sculptor/frontend/src/electron/: appProtocol.test.ts  appProtocol.ts  constants.ts  main.ts  utils.ts
sculptor/frontend/src/hooks/: useAppZoom.ts
sculptor/frontend/src/layouts/: PageLayout.module.scss  PageLayout.tsx
sculptor/frontend/src/shared/: types.ts
sculptor/frontend/src/styles/: _scrollbar.scss  tokens.css
sculptor/sculptor/: conftest.py  constants.py  startup_checks.py  version.py  version_test.py
sculptor/sculptor-experimental/skills/handoff/: SKILL.md
sculptor/sculptor-experimental/skills/restack/: SKILL.md
sculptor/sculptor-workflow/skills/architect/: SKILL.md
sculptor/sculptor-workflow/skills/fix-bug/: SKILL.md
sculptor/sculptor-workflow/skills/mock/: SKILL.md
sculptor/sculptor-workflow/skills/plan/: SKILL.md
sculptor/sculptor-workflow/skills/review/: SKILL.md
sculptor/sculptor-workflow/skills/setup-repo/: SKILL.md
sculptor/sculptor-workflow/skills/spec/: SKILL.md
sculptor/sculptor/agents/: harness_registry.py  harness_registry_test.py
sculptor/sculptor/agents/default/: agent_wrapper_test.py  constants.py
sculptor/sculptor/agents/terminal_agent/: harness.py  harness_test.py
sculptor/sculptor/cli/: app.py  main.py  main_test.py
sculptor/sculptor/common/: plugin.py
sculptor/sculptor/config/: settings.py  test_settings.py  user_config.py  user_config_test.py
sculptor/sculptor/database/: automanaged.py  core.py  models.py  utils.py  workspace_enums.py
sculptor/sculptor/database/alembic/: env.py  frozen_pydantic_schemas.json  utils.py
sculptor/sculptor/foundation/: async_monkey_patches.py  common.py  concurrency_group.py  conftest.py  event_utils.py  git.py  pydantic_serialization.py  pydantic_serialization_test.py  serialization.py  subprocess_utils.py
sculptor/sculptor/foundation/processes/: local_process.py
sculptor/sculptor/interfaces/agents/: README.md  agent.py  artifacts.py  errors.py  errors_test.py  harness.py  messages.py  tasks.py  tool_names.py
sculptor/sculptor/interfaces/environments/: agent_execution_environment.py  base.py  errors.py
sculptor/sculptor/primitives/: ids.py  threads_test.py
sculptor/sculptor/service_collections/: service_collection.py
sculptor/sculptor/services/btw_service/: api_test.py
sculptor/sculptor/services/ci_babysitter_service/: coordinator.py  coordinator_test.py  transitions.py  transitions_test.py
sculptor/sculptor/services/data_model_service/: api.py  data_types.py  sql_implementation.py  sql_implementation_test.py
sculptor/sculptor/services/git_repo_service/: data_types.py  default_implementation.py  default_implementation_test.py  git_errors.py  git_ref_scanning.py  git_repos.py  service_collection.py
sculptor/sculptor/services/project_service/: api.py  default_implementation.py
sculptor/sculptor/state/: chat_state.py  chat_state_test.py  messages.py  test_messages.py
sculptor/sculptor/tasks/: api.py
sculptor/sculptor/testing/: dependency_stubs.py  electron_frontend.py  electron_frontend_test.py  fake_terminal_agent.py  fake_terminal_agent_runner.py  fake_terminal_agent_test.py  frontend_utils.py  manual_test_harness.py  packaged_backend_frontend.py  packaged_electron_frontend.py  playwright_conftest.py  playwright_utils.py  resources.py  sculptor_instance.py  sculptor_instance_test.py  server_utils.py  terminal_socket_mock.py
sculptor/sculptor/utils/: migration.py  migration_test.py  tracing.py  tracing_test.py
sculptor/sculptor/web/: agent_terminal_ws_test.py  app.py  app_basic_test.py  app_streams_test.py  app_ui_open_file_test.py  app_ui_webview_test.py  app_upload_test.py  auth.py  cli_status_utils.py  cli_status_utils_test.py  data_types.py  data_types_test.py  derived.py  derived_activity_test.py  derived_task_status_test.py  middleware.py  pr_polling_service.py  pr_polling_service_test.py  pr_status.py  pr_status_test.py  repo_polling_manager.py  skills.py  streams.py  streams_scope_test.py  streams_test.py  terminal_close_test.py  terminal_input_test.py  terminal_signal_test.py  trace_endpoint_test.py  ui_actions.py  workspace_files_test.py
sculptor/tests/: conftest.py
(+474 files in other folders)
