[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sculptor"

# Non-release branches (including main) must always use a .dev suffix (e.g. 0.10.0.dev0).
# Release branches set the concrete version (e.g. 0.10.0 or 0.10.0rc1).
version = "0.39.0.dev0"

readme = "README.md"
license = { text = "MIT" }
dependencies = [
    # Please add dev dependencies to dependency-groups.dev, not here.
    # Please keep these sorted alphabetically.
    "alembic>=1.16.1",
    # Several deps below were absorbed from the former imbue_core library when it was
    # folded into sculptor.foundation; keep them sorted in.
    "anyio",
    # Pyrefly understands @attr.s classes only with the PEP 681 dataclass_transform
    # stubs introduced in attrs 26; older stubs leave it unable to see generated __init__s.
    "attrs>=26.1.0",
    "cachetools",
    "coolname>=2.2.0",
    "fastapi",
    "filelock>=3.8.0",
    "httpx",
    "loguru",
    "psutil>=5.9.0",
    "pydantic>=2.11.4",
    "pydantic-settings",
    "pygit2>=1.18.0",
    "python-slugify>=8.0.0",
    "requests>=2.28.0",
    "sqlalchemy",
    "tblib>=3.1",
    "tenacity>=8.2.2",
    "tomlkit>=0.13.0",
    "typeid-python",
    "typer",
    "uvicorn>=0.34.3",
    "viztracer>=1.0.0",
    "websockets>=15.0.1",
]
requires-python = ">=3.14"

[tool.uv.sources]
sculpt = { workspace = true }

[tool.setuptools.packages.find]
exclude = [
    "keys",

    # Exclude any testing packages from being included in our code.
    "tests",
    "tests.*",
    "*.tests",
    "*.tests.*",
    "testing",
    "testing.*",
    "*.testing",
    "*.testing.*",
    "sculptor.testing",
    "sculptor.testing.*",
]

[dependency-groups]
dev = [
    # The source-built `sculpt` CLI. sculptor does not import it (agents shell out
    # to the `sculpt` binary), but declaring it as a dev dependency guarantees the
    # dev venv always contains `.venv/bin/sculpt` built from source — so it is in
    # every `uv run --project sculptor` resolution and can never be pruned as an
    # extraneous package, which is what let agents silently fall back to the stale
    # packaged CLI (SCU-1360). Excluded from production via `uv sync --no-dev`.
    "sculpt",
    # inline-snapshot, pytest-asyncio and pytest-mock were absorbed from the former
    # imbue_core library (now sculptor.foundation) — its tests need them.
    "inline-snapshot",
    # playwright's bundled Chromium must match Electron's (1.53 <-> Electron 37,
    # 1.60 <-> Electron 42) for connect_over_cdp; bump together with Electron.
    "playwright==1.60.0",
    "pyrefly>=1.0.0",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-performancetotal==1.0.0",
    "pytest-playwright==0.8.0",
    # Splits the integration suite into balanced groups so CI can shard it across
    # parallel runners (see the test-integration matrix in .github/workflows/ci.yml).
    "pytest-split>=0.9.0",
    "pytest-timeout",
    "pytest-xdist>=3.8.0",
    "pytest>=9",
    # Only consumer is the justfile `check-yaml` recipe's inline `import yaml`.
    "pyyaml>=6.0",
    "syrupy",
    "tabulate>=0.9.0",
    "websocket-client>=1.5.1",
]

[project.optional-dependencies]
packaging = [
    # When we run pyinstaller, we want to exclude dev dependencies for a smaller executable
    # but pyinstaller itself needs to be available so it can't be a dev dependency.
    "pyinstaller>=6.15.0",
]

[project.scripts]
sculptor = "sculptor.cli.main:main"
builder = "builder.cli:app"  # Utilities for building and releasing Sculptor
